# HammingArchiver

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/Archiver/: Archiver.cpp  Archiver.h
lib/ArgParser/: ArgParser.cpp  ArgParser.h
lib/Exceptions/: Exceptions.cpp  Exceptions.h
lib/FilesWorker/: FileHeader.cpp  FileHeader.h
lib/HammingCode/: HammingCode.cpp  HammingCode.h
tests/: CMakeLists.txt  MyArchiver_tests.cpp
