add_library(MyArchiver
        ArgParser/ArgParser.cpp ArgParser/ArgParser.h
        HammingCode/HammingCode.cpp HammingCode/HammingCode.h
        Exceptions/Exceptions.cpp Exceptions/Exceptions.h
        Archiver/Archiver.cpp
        Archiver/Archiver.h
        FilesWorker/FileHeader.cpp
        FilesWorker/FileHeader.h)